alumni-styles.css
:root {
	--dk-purple: #510c76;
	--purple: #8348ad;
	--lt-purple: #9e28b5;
	--green: #4c9c2e;
	--white: #fff;
	--black: #222;
	--dk-gray: #555;
	--med-gray: #98999b;
	--gray: #eaeaea;
	--lt-gray: #f8f8f8;
}

#alumniBusinessDirectory {
	font-family: "Lato", sans-serif;
	font-weight: 400;
	font-style: normal;
	font-size: 100%;
	line-height: 1.65;
	color: var(--black);
}

#alumniBusinessDirectory .slds-p-horizontal_x-small {
	margin: 0 1rem;
	padding: 2rem;
	border: 1px solid var(--dk-purple);
	background-image: linear-gradient(to right, var(--dk-purple), var(--purple));
}

#alumniBusinessDirectory .slds-p-horizontal_x-small > .slds-p-horizontal_x-small {
	padding: 0.5rem 1rem;
	margin: 1rem 0 0;
	background: var(--white);
}

#alumniBusinessDirectory .slds-m-around_xx-small,
#alumniBusinessDirectory .slds-m-around--xx-small {
	display: block;
}

#alumniBusinessDirectory .slds-wrap {
	justify-content: space-between;
	align-items: stretch;
}

#alumniBusinessDirectory .slds-form-element__label {
	color: var(--white);
	letter-spacing: 0.5px;
}

#alumniBusinessDirectory .slds-input,
#alumniBusinessDirectory .slds-input_faux {
	font-family: "Lora", serif;
	font-optical-sizing: auto;
	font-weight: 400;
	font-style: normal;
	color: var(--dk-gray);
	padding: 0.5rem;
	border-radius: 0;
}

#alumniBusinessDirectory .slds-input::placeholder {
	font-family: "Lora", serif;
	font-optical-sizing: auto;
	font-weight: 400;
	font-style: normal;
	color: var(--dk-gray);
	text-transform: capitalize;
}

#alumniBusinessDirectory .slds-input__icon.slds-input__icon_left.slds-icon-text-default {
	display: block;
	top: 50%;
	transform: translateY(-50%);
	left: auto;
	right: 0.5rem;
	margin-top: 0;
	width: 1.5rem;
	height: 1.5rem;
	fill: var(--dk-purple);
	pointer-events: none;
}

#alumniBusinessDirectory .slds-p-around_small,
#alumniBusinessDirectory .slds-p-around--small {
	padding: 0.5rem;
	margin: 1rem 0 0;
}

#alumniBusinessDirectory .slds-grid.slds-wrap .slds-large-size_1-of-4 {
	padding: 0 0.5rem;
	margin: 0 0 0.5rem;
}

#alumniBusinessDirectory .grid-record-display {
	height: 100%;
	box-shadow: 0 0 1px 1px rgba(0, 0, 0, 10%);
	border-bottom: 3px solid var(--green);
}

#alumniBusinessDirectory .grid-record-display .slds-text-align_center,
#alumniBusinessDirectory .grid-record-display .slds-text-align--center {
	text-align: left;
}

#alumniBusinessDirectory .logo-container {
	width: 100%;
	height: auto;
	padding: 0;
	aspect-ratio: 4 / 3;
	background-color: var(--lt-gray);
}

#alumniBusinessDirectory .logo-container img {
	width: 100%;
	height: 100%;
	object-fit: cover;
}

#alumniBusinessDirectory .logo-container + .slds-p-around_small.slds-m-top_small {
	padding: 0.5rem 1.5rem;
}

#alumniBusinessDirectory p.ust-grid-record-business-name-display,
#alumniBusinessDirectory p.ust-modal-first-name-last-name-degree {
	font-size: 1.25rem;
	line-height: 1.25;
	color: var(--dk-purple);
	text-align: center;
	margin: 0 0 0.5rem;
}

#alumniBusinessDirectory p.ust-modal-first-name-last-name-degree {
	text-align: center;
}

#alumniBusinessDirectory p.ust-grid-record-business-name-display + p {
	font-size: 0.9rem;
	font-weight: 600;
	letter-spacing: 0.25px;
	text-align: center;
	padding: 0 0 1rem;
	margin: 0 0 1rem;
	border-bottom: 2px solid var(--purple);
}

#alumniBusinessDirectory p.ust-grid-record-business-name-display ~ p.slds-m-top_xx-small {
	font-size: 1.15rem;
	font-weight: 600;
	line-height: 1.5;
	color: var(--dk-purple);
}

#alumniBusinessDirectory .ust-grid-record-company-description {
	line-height: 1.5;
}

#alumniBusinessDirectory .ust-grid-record-company-industry span,
#alumniBusinessDirectory .ust-grid-record-company-special-interest span,
#alumniBusinessDirectory .ust-grid-record-st-thomas-discount,
#alumniBusinessDirectory .ust-modal-company-overview {
	font-weight: 600;
	text-transform: uppercase;
	letter-spacing: 0.5px;
	color: var(--lt-purple);
}

#alumniBusinessDirectory .ust-grid-record-company-industry span::after,
#alumniBusinessDirectory .ust-grid-record-company-special-interest span::after,
#alumniBusinessDirectory .ust-modal-company-overview::after {
	content: ": ";
	color: var(--lt-purple);
}

#alumniBusinessDirectory p.slds-m-top_x-small + p.slds-m-top_xx-small {
	font-size: 1rem;
	font-weight: 400;
	color: var(--black);
}

#alumniBusinessDirectory p.slds-m-top_xx-small + p.slds-m-top_xx-small {
	font-size: 1rem;
	font-weight: 600;
	text-transform: uppercase;
	letter-spacing: 0.5px;
	color: var(--lt-purple);
}

#alumniBusinessDirectory .slds-button {
	padding: 0.25rem 1.5rem;
	border-radius: 50vh;
	border: 2px solid var(--dk-purple);
	text-transform: uppercase;
	letter-spacing: 0.5px;
	font-weight: 600;
	color: var(--lt-purple);
	background-color: transparent;
	transition:
		color 300ms ease-in-out,
		background-color 300ms ease-in-out;
}

#alumniBusinessDirectory .slds-button:focus,
#alumniBusinessDirectory .slds-button:hover {
	color: var(--white);
	background-color: var(--dk-purple);
}

#alumniBusinessDirectory .ust-modal-company-name {
	font-weight: 600;
	color: var(--dk-purple);
}

#alumniBusinessDirectory .slds-button.slds-button_icon.slds-button_icon-bare {
	border: none;
	padding: 0.5rem;
}

#alumniBusinessDirectory .slds-modal__content > .slds-wrap {
	max-width: 90%;
	padding: 1rem 0;
	margin: 0 auto;
}

#alumniBusinessDirectory .slds-modal__content .slds-col.slds-size_1-of-2.slds-align_absolute-center:has(img) {
	width: 150px;
	height: auto;
	margin: 1rem;
	border-radius: 50%;
	overflow: hidden;
	aspect-ratio: 1;
	border: 3px solid var(--gray);
}

#alumniBusinessDirectory .slds-modal__content .slds-border_bottom,
#alumniBusinessDirectory .slds-modal__content .slds-border--bottom {
	border-bottom: none;
}

#alumniBusinessDirectory .slds-modal__content .slds-col.slds-size_1-of-2.slds-align_absolute-center img {
	width: 100%;
	height: 100%;
	object-fit: cover;
}

#alumniBusinessDirectory .slds-modal__content .logo-container {
	width: 100%;
	height: auto;
	margin: 1rem 0 0;
	aspect-ratio: 16 / 9;
}

#alumniBusinessDirectory .slds-modal__content .logo-container img {
	width: 100%;
	height: 100%;
	object-fit: cover;
}

#alumniBusinessDirectory .slds-modal__footer {
	color: var(--white);
	background-color: var(--purple);
	border-top: none;
}

@media (min-width: 48em) {
	#alumniBusinessDirectory .slds-modal__container {
		width: 70%;
		max-width: 55em;
	}
}

@media (min-width: 64em) {
	#alumniBusinessDirectory .slds-grid.slds-wrap .slds-large-size_1-of-4,
	#alumniBusinessDirectory .slds-grid.slds-wrap .slds-large-size--1-of-4 {
		width: 100%;
	}

	#alumniBusinessDirectory .slds-grid.slds-wrap .slds-large-size_1-of-4:nth-of-type(2),
	#alumniBusinessDirectory .slds-grid.slds-wrap .slds-large-size--1-of-4:nth-of-type(2),
	#alumniBusinessDirectory .slds-grid.slds-wrap .slds-large-size_1-of-4:nth-of-type(3),
	#alumniBusinessDirectory .slds-grid.slds-wrap .slds-large-size--1-of-4:nth-of-type(3),
	#alumniBusinessDirectory .slds-grid.slds-wrap .slds-large-size_1-of-4:nth-of-type(4),
	#alumniBusinessDirectory .slds-grid.slds-wrap .slds-large-size--1-of-4:nth-of-type(4) {
		width: 33.333%;
	}
}

